[gd_scene load_steps=11 format=3 uid="uid://ds2akc48ahha8"]

[ext_resource type="Script" path="res://maze/maze.gd" id="1_b040o"]
[ext_resource type="PackedScene" uid="uid://crkoxgceel0nd" path="res://levels/level0.tscn" id="2_bood3"]
[ext_resource type="PackedScene" uid="uid://b2426leq2msmq" path="res://mouse/mouse.tscn" id="2_xw0hm"]
[ext_resource type="PackedScene" uid="uid://dsfau8cwex7mv" path="res://levels/level2.tscn" id="3_d7b3d"]
[ext_resource type="PackedScene" uid="uid://cia1udlihyjna" path="res://map/map.tscn" id="3_kjkfn"]
[ext_resource type="PackedScene" uid="uid://iobefrae8kws" path="res://levels/level3.tscn" id="4_12jy3"]
[ext_resource type="Theme" uid="uid://obkqpiyh8l33" path="res://ui_theme.tres" id="5_c0u62"]
[ext_resource type="Script" path="res://maze/UI.gd" id="5_w6u6f"]
[ext_resource type="PackedScene" uid="uid://3gsdm8cw3x4x" path="res://cheese/Cheese.tscn" id="6_plrxg"]

[sub_resource type="Shortcut" id="Shortcut_wl6qt"]

[node name="Maze" type="Node2D"]
script = ExtResource("1_b040o")
levels = Array[PackedScene]([ExtResource("2_bood3"), ExtResource("3_d7b3d"), ExtResource("4_12jy3")])

[node name="ElderMouse" parent="." instance=ExtResource("2_xw0hm")]
position = Vector2(96, 416)
mouse_type = "elder"
spawn_position = Vector2(96, 416)

[node name="Map" parent="." instance=ExtResource("3_kjkfn")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("5_w6u6f")

[node name="PlayButton" type="Button" parent="CanvasLayer"]
texture_filter = 1
offset_left = 69.0
offset_top = 80.0
offset_right = 114.0
offset_bottom = 104.0
theme = ExtResource("5_c0u62")
text = "Play [SPACE]"

[node name="YellowCheeseButton" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 414.0
offset_top = 99.0
offset_right = 414.0
offset_bottom = 115.0

[node name="Button" type="Button" parent="CanvasLayer/YellowCheeseButton"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.5
offset_top = 2.0
offset_right = 41.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_c0u62")
shortcut = SubResource("Shortcut_wl6qt")
text = "Yellow [1]"

[node name="Cheese" parent="CanvasLayer/YellowCheeseButton" instance=ExtResource("6_plrxg")]
position = Vector2(0, 0)
snap = false

[node name="GreenCheeseButton" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 502.0
offset_top = 99.0
offset_right = 502.0
offset_bottom = 115.0

[node name="Button" type="Button" parent="CanvasLayer/GreenCheeseButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.5
offset_top = 2.0
offset_right = 41.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_c0u62")
shortcut = SubResource("Shortcut_wl6qt")
text = "Green [2]"

[node name="Cheese" parent="CanvasLayer/GreenCheeseButton" instance=ExtResource("6_plrxg")]
position = Vector2(0, 0)
colour = 1
snap = false

[node name="RedCheeseButton" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 591.0
offset_top = 99.0
offset_right = 591.0
offset_bottom = 115.0

[node name="Button" type="Button" parent="CanvasLayer/RedCheeseButton"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.5
offset_top = 2.0
offset_right = 41.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_c0u62")
shortcut = SubResource("Shortcut_wl6qt")
text = "Red [3]"

[node name="Cheese" parent="CanvasLayer/RedCheeseButton" instance=ExtResource("6_plrxg")]
position = Vector2(0, 0)
colour = 2
snap = false

[node name="OrangeCheeseButton" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 680.0
offset_top = 99.0
offset_right = 680.0
offset_bottom = 115.0

[node name="Button" type="Button" parent="CanvasLayer/OrangeCheeseButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.5
offset_top = 2.0
offset_right = 41.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_c0u62")
shortcut = SubResource("Shortcut_wl6qt")
text = "Orange [4]"

[node name="Cheese" parent="CanvasLayer/OrangeCheeseButton" instance=ExtResource("6_plrxg")]
position = Vector2(0, 0)
colour = 3
snap = false

[node name="BlueCheeseButton" type="Control" parent="CanvasLayer"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_left = 771.0
offset_top = 99.0
offset_right = 771.0
offset_bottom = 115.0

[node name="Button" type="Button" parent="CanvasLayer/BlueCheeseButton"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -41.5
offset_top = 2.0
offset_right = 41.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("5_c0u62")
shortcut = SubResource("Shortcut_wl6qt")
text = "Blue [5]"

[node name="Cheese" parent="CanvasLayer/BlueCheeseButton" instance=ExtResource("6_plrxg")]
position = Vector2(0, 0)
colour = 4
snap = false

[node name="HintsButton" type="Button" parent="CanvasLayer"]
texture_filter = 1
offset_left = 26.0
offset_top = 110.0
offset_right = 166.0
offset_bottom = 141.0
theme = ExtResource("5_c0u62")
text = "Show Hints [TAB]"

[node name="CheeseCursor" parent="." instance=ExtResource("6_plrxg")]
modulate = Color(1, 1, 1, 0.470588)
position = Vector2(288, 416)
show_count = false

[connection signal="level_complete" from="Map" to="." method="_on_map_level_complete"]
[connection signal="choose_cheese_colour" from="CanvasLayer" to="." method="_on_ui_choose_cheese_colour"]
[connection signal="pressed" from="CanvasLayer/PlayButton" to="." method="_on_navigation_step_pressed"]
[connection signal="pressed" from="CanvasLayer/YellowCheeseButton/Button" to="CanvasLayer" method="_on_yellow_cheese_pressed"]
[connection signal="pressed" from="CanvasLayer/GreenCheeseButton/Button" to="CanvasLayer" method="_on_green_cheese_pressed"]
[connection signal="pressed" from="CanvasLayer/RedCheeseButton/Button" to="CanvasLayer" method="_on_red_cheese_pressed"]
[connection signal="pressed" from="CanvasLayer/OrangeCheeseButton/Button" to="CanvasLayer" method="_on_orange_cheese_pressed"]
[connection signal="pressed" from="CanvasLayer/BlueCheeseButton/Button" to="CanvasLayer" method="_on_blue_cheese_pressed"]
[connection signal="button_down" from="CanvasLayer/HintsButton" to="." method="_on_hints_button_button_down"]
[connection signal="button_up" from="CanvasLayer/HintsButton" to="." method="_on_hints_button_button_up"]
